tests/specs/test/document/document_test.js
Deno.test("document query selector", () => {
  document.querySelector("div");
});
